--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/ollama": "^0.2.3",
     "@langchain/openai": "^0.6.2",
     "@langchain/textsplitters": "^0.1.0",
+    "@libsql/client": "^0.15.15",
     "@tailwindcss/typography": "^0.5.12",
     "@types/he": "^1.2.3",
     "@xenova/transformers": "^2.17.2",
