--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "format:write": "prettier . --write",
-    "db:migrate": "node ./src/lib/db/migrate.ts"
+    "db:migrate": "node ./src/lib/db/migrate.ts",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
