--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ API_KEY = ""
 API_KEY = ""
 
 [MODELS.GEMINI]
-API_KEY = ""
+API_KEY = "AIzaSyBa0Nbv_A7EhIKq30mqiYucK5lDzzUBjl0"
 
 [MODELS.CUSTOM_OPENAI]
 API_KEY = ""
