--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "start": "next start",
     "lint": "next lint",
     "format:write": "prettier . --write",
-    "db:migrate": "node ./src/lib/db/migrate.ts",
+    "db:migrate": "npx tsx ./src/lib/db/migrate.ts",
+    "db:migrate:turso": "npx tsx ./src/lib/db/migrate-turso.ts",
+    "db:check-sessionid": "npx tsx ./src/lib/db/check-sessionid-column.ts",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/lib-storage": "^3.971.0",
     "@headlessui/react": "^2.2.0",
     "@iarna/toml": "^2.2.5",
     "@icons-pack/react-simple-icons": "^12.3.0",
@@ -24,7 +28,7 @@
     "@langchain/ollama": "^0.2.3",
     "@langchain/openai": "^0.6.2",
     "@langchain/textsplitters": "^0.1.0",
-    "@libsql/client": "^0.15.15",
+    "@libsql/client": "^0.14.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/he": "^1.2.3",
     "@xenova/transformers": "^2.17.2",
@@ -34,11 +38,12 @@
     "compute-cosine-similarity": "^1.1.0",
     "compute-dot": "^1.1.0",
     "drizzle-orm": "^0.40.1",
+    "fast-xml-parser": "^5.3.3",
     "he": "^1.2.0",
     "highlight.js": "^11.11.1",
     "html-to-text": "^9.0.5",
     "i18next": "^25.5.3",
-    "jspdf": "^3.0.1",
+    "jspdf": "^4.0.0",
     "langchain": "^0.3.30",
     "lucide-react": "^0.363.0",
     "mammoth": "^1.9.1",
@@ -51,7 +56,6 @@
     "react-i18next": "^16.0.0",
     "react-text-to-speech": "^0.14.5",
     "react-textarea-autosize": "^8.5.3",
-    "rss-parser": "^3.13.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "winston": "^3.17.0",
@@ -67,12 +71,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.30.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.18.1",
+    "eslint": "^9",
+    "eslint-config-next": "^16.1.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
