--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.985.0",
     "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/lib-dynamodb": "^3.985.0",
     "@aws-sdk/lib-storage": "^3.971.0",
     "@headlessui/react": "^2.2.0",
     "@iarna/toml": "^2.2.5",
@@ -31,6 +33,7 @@
     "@libsql/client": "^0.14.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/he": "^1.2.3",
+    "@upstash/redis": "^1.36.2",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.3",
     "better-sqlite3": "^11.9.1",
