--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.0",
     "compute-cosine-similarity": "^1.1.0",
     "compute-dot": "^1.1.0",
+    "dompurify": "^3.3.1",
     "drizzle-orm": "^0.40.1",
     "fast-xml-parser": "^5.3.3",
     "he": "^1.2.0",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/dompurify": "^3.0.5",
     "@types/html-to-text": "^9.0.4",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
