--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.985.0",
     "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/client-s3vectors": "^3.985.0",
     "@aws-sdk/lib-dynamodb": "^3.985.0",
     "@aws-sdk/lib-storage": "^3.971.0",
+    "@aws-sdk/util-dynamodb": "^3.985.0",
     "@headlessui/react": "^2.2.0",
     "@iarna/toml": "^2.2.5",
     "@icons-pack/react-simple-icons": "^12.3.0",
