Fix Article ページ, Images API: SearXNG API

--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "clsx": "^2.1.0",
     "compute-cosine-similarity": "^1.1.0",
     "compute-dot": "^1.1.0",
-    "dompurify": "^3.3.1",
     "drizzle-orm": "^0.40.1",
     "fast-xml-parser": "^5.3.3",
     "he": "^1.2.0",
     "highlight.js": "^11.11.1",
     "html-to-text": "^9.0.5",
     "i18next": "^25.5.3",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
     "jspdf": "^4.0.0",
     "langchain": "^0.3.30",
     "lucide-react": "^0.363.0",
@@ -71,7 +71,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/dompurify": "^3.0.5",
     "@types/html-to-text": "^9.0.4",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
