--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "highlight.js": "^11.11.1",
     "html-to-text": "^9.0.5",
     "i18next": "^25.5.3",
-    "isomorphic-dompurify": "^3.0.0-rc.2",
     "jspdf": "^4.0.0",
     "langchain": "^0.3.30",
     "lucide-react": "^0.363.0",
@@ -62,6 +61,7 @@
     "react-i18next": "^16.0.0",
     "react-text-to-speech": "^0.14.5",
     "react-textarea-autosize": "^8.5.3",
+    "sanitize-html": "^2.17.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "winston": "^3.17.0",
@@ -77,6 +77,7 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "^10.0.1",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.18.1",
